--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,49 @@
-.App {}
+.App {
+  margin: 20px;
+  width: 1400px;
+  margin: 0 auto;
+}
 
 .App-header {
   border: solid 4px black;
   padding: 20px;
 }
 
+.component-label {
+  text-align: center;
+}
 
+.sidebar {
+  border: solid 2px black;
+  width: 25%;
+  height: 400px;
+}
+
+.sidebar ul {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.sidebar li {
+  list-style: none;
+}
+
+.main-content {
+  width: 75%;
+  height: 400px;
+  border: solid 1px black;
+}
+
+.flex-container {
+  display: flex;
+  flex-direction: row;
+}
+
+.footer {
+  border: solid 1px black;
+  height: 150px;
+}
 
 /* .App {
   text-align: center;
