--- a/src/App.css
+++ b/src/App.css
@@ -45,6 +45,25 @@
   height: 150px;
 }
 
+/* TABLE / Table.component.css */
+table {
+  font-family: arial, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+  margin: 40px;
+}
+
+td,
+th {
+  border: 1px solid #dddddd;
+  text-align: left;
+  padding: 8px;
+}
+
+tr:nth-child(even) {
+  background-color: #dddddd;
+}
+
 /* .App {
   text-align: center;
 }
